# Yggdrasil

./: CLAUDE.md  LICENSE  pyproject.toml
docs/: random_forest_leaf_kernel_recipes.md
experiments/: .gitignore  README.md  __init__.py
experiments/A_signal_characterization/: README.md  __init__.py  run.py
experiments/A_signal_characterization/results/: summary.json
experiments/B_partition_traps/: README.md  __init__.py  run.py
experiments/B_partition_traps/results/: summary.json
experiments/common/: __init__.py  datasets.py  reporting.py  signals.py
src/yggdrasil/: __init__.py
src/yggdrasil/clustering/: __init__.py  diagnostics.py  discriminative.py  forest.py  kernel.py  selector.py
src/yggdrasil/clustering/diagnostics/: __init__.py  forest_quality.py  partition.py  rotation.py  spectrum.py  stability.py
src/yggdrasil/utils/: synthetic.py
tests/yggdrasil/clustering/: test_diagnostics.py  test_discriminative.py  test_forest.py  test_kernel.py  test_selector.py
tests/yggdrasil/clustering/diagnostics/: test_forest_quality.py  test_partition.py  test_rotation.py  test_spectrum.py  test_stability.py
tests/yggdrasil/utils/: test_synthetic.py
