[project]
name = "yggdrasil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "black-milk", email = "edwinm87@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "N",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"src/yggdrasil/*" = ["N803", "N806", "RUF012"]
"tests/*" = ["N803", "N806"]

[tool.ruff.format]
docstring-code-format = true
